[package]
name = "zh_num"
version = "0.3.6"
edition = "2021"
license = "MIT"
authors = ["A4-Tacks <wdsjxhno1001@163.com>"]

description = "Convert ASCII numbers and zh words"
keywords = ["zh", "number", "number-to-words"]
repository = "https://github.com/A4-Tacks/zh_num"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zh_num"
path = "./src/main.rs"
required-features = ["bin"]

[features]
default = []
bin = ["clap", "clap/derive"]

[profile.release]
lto = true
strip = true

[dependencies]
peg = "0.8.3"
clap = { version = "4.5.9", optional = true }
